[GTK][WPE] Compilation warnings with clang/gcc 10 https://bugs.webkit.org/show_bug.cgi?id=215699

Reviewed by Darin Adler.

.:

* Source/cmake/WebKitCompilerFlags.cmake: Disable tautological-compare and
misleading-indentation warnings triggering false-positive when building JSC.

Source/WebCore:

* Modules/indexeddb/server/SQLiteIDBBackingStore.h: Mark class as final because its destructor is marked as such.
(WebCore::IDBServer::SQLiteIDBBackingStore::databaseDirectory const): Deleted.
(WebCore::IDBServer::SQLiteIDBBackingStore::sessionID const): Deleted.
(WebCore::IDBServer::SQLiteIDBBackingStore::databaseRootDirectoryIsolatedCopy const): Deleted.
* dom/messageports/MessagePortChannelProviderImpl.h: Ditto.
* layout/Verification.cpp:
(WebCore::Layout::outputMismatchingComplexLineInformationIfNeeded): Remove spurious
matchingRuns assignment. I have no idea how this was supposed to work?
* platform/image-decoders/jpeg/JPEGImageDecoder.cpp:
(WebCore::JPEGImageReader::decode): Use FALLTHROUGH macro.
* platform/image-decoders/webp/WEBPImageDecoder.cpp:
(WebCore::WEBPImageDecoder::decodeFrame): Ditto.

Source/WebKit:

* UIProcess/API/wpe/PageClientImpl.cpp:
(WebKit::PageClientImpl::doneWithTouchEvent): Use null input touch event enum value for touch event handling.

Tools:

* TestWebKitAPI/Tests/WebKitGLib/TestUIClient.cpp: Wrap m_geometry private field in GTK
ifdefs, this is not used in WPE.
* WebKitTestRunner/wpe/PlatformWebViewWPE.cpp:
(WTR::PlatformWebView::windowFrame): Return rect built with explicit initializers.
* wpe/backends/WindowViewBackend.cpp: Supply additional touch client callbacks, mandated by the interface.

Canonical link: https://commits.webkit.org/228502@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@266025 268f45cc-cd09-0410-ab3c-d52691b4dbfc