Source/WebCore/platform/image-decoders/jpeg/JPEGImageDecoder.cpp
@@ -338,7 +338,7 @@ public:
                 m_info.src->bytes_in_buffer = 0;
                 return true;
             }
-        // FALL THROUGH
+            FALLTHROUGH;
 
         case JPEG_START_DECOMPRESS:
             // Set parameters for decompression.
@@ -356,7 +356,7 @@ public:
 
             // If this is a progressive JPEG ...
             m_state = (m_info.buffered_image) ? JPEG_DECOMPRESS_PROGRESSIVE : JPEG_DECOMPRESS_SEQUENTIAL;
-        // FALL THROUGH
+            FALLTHROUGH;
 
         case JPEG_DECOMPRESS_SEQUENTIAL:
             if (m_state == JPEG_DECOMPRESS_SEQUENTIAL) {
@@ -368,7 +368,7 @@ public:
                 ASSERT(m_info.output_scanline == m_info.output_height);
                 m_state = JPEG_DONE;
             }
-        // FALL THROUGH
+            FALLTHROUGH;
 
         case JPEG_DECOMPRESS_PROGRESSIVE:
             if (m_state == JPEG_DECOMPRESS_PROGRESSIVE) {
@@ -422,7 +422,7 @@ public:
 
                 m_state = JPEG_DONE;
             }
-        // FALL THROUGH
+            FALLTHROUGH;
 
         case JPEG_DONE:
             // Finish decompression.
