Tools/wpe/backends/WindowViewBackend.cpp
@@ -414,6 +414,10 @@ const struct wl_touch_listener WindowViewBackend::s_touchListener = {
     [](void*, struct wl_touch*) { },
     // cancel
     [](void*, struct wl_touch*) { },
+    // shape
+    [](void*, struct wl_touch*, int32_t, wl_fixed_t, wl_fixed_t) { },
+    // orientation
+    [](void*, struct wl_touch*, int32_t, wl_fixed_t) { },
 };
 
 const struct wl_seat_listener WindowViewBackend::s_seatListener = {
